muj.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muj-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: muj-demo
  template:
    metadata:
      labels:
        app: muj-demo
    spec:
      containers:
      - name: muj-demo
        image: muj:latest
        imagePullPolicy: Never

---

apiVersion: v1
kind: Service
metadata:
  name: muj-svc
spec:
  selector:
    app: muj-demo
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
